gestion des erreurs

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -4,3 +4,16 @@ body {
 .special {
     padding-top:50px;
 }
+
+.error-container {
+    text-align: center;
+    padding: 50px;
+    background-color: #f8f9fa;
+    border-radius: 10px;
+    margin-top: 50px;
+}
+.error-code {
+    font-size: 72px;
+    font-weight: bold;
+    color: #dc3545;
+}
