--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -8,30 +8,16 @@
 <div th:replace="~{fragments/header :: header}"></div>
 <div th:replace="~{fragments/nav :: nav}"></div>
 
-<section class="container">
-    <table class="table">
-        <tr>
-            <td>Error Message</td>
-            <td th:text="${message}"></td>
-        </tr>
-        <tr>
-            <td>Status Code</td>
-            <td th:text="${status}"></td>
-        </tr>
-        <tr>
-            <td>Exception</td>
-            <td th:text="${exception}"></td>
-        </tr>
-        <tr>
-            <td>Stacktrace</td>
-            <td><pre th:text="${trace}"></pre></td>
-        </tr>
-        <tr>
-            <td>Binding Errors</td>
-            <td th:text="${errors}"></td>
-        </tr>
-    </table>
-</section>
+<div class="container">
+    <div class="error-container">
+        <div class="error-code" th:text="${status}">500</div>
+        <h2>Oups, une erreur est survenue !</h2>
+        <p th:text="${error}">Erreur inconnue</p>
+        <p th:if="${message}" th:text="${message}">Message détaillé</p>
+        <p th:if="${exception}" th:text="${exception}">Exception détaillé</p>
+        <a href="/" class="btn btn-primary">Retour à l'accueil</a>
+    </div>
+</div>
 
 <div th:replace="~{fragments/footer :: footer }"></div>
 <div th:replace="~{fragments/footer :: scripts}"></div>
