--- a/src/main/resources/templates/createperson.html
+++ b/src/main/resources/templates/createperson.html
@@ -20,7 +20,7 @@
                 <small id="firstNameHelp" class="form-text text-muted">Merci d'écrire le prénom de la personne.</small>
             </div>
             <div class="form-group">
-                <label for="lastNameInput">Prénom</label>
+                <label for="lastNameInput">Nom</label>
                 <input type="text" th:field="*{lastname}" class="form-control" id="lastNameInput"
                        aria-describedby="lastNameHelp" placeholder="Saisir le nom">
                 <small id="lastNameHelp" class="form-text text-muted">Merci d'écrire le nom de la personne.</small>
